z-index fix

--- a/style.css
+++ b/style.css
@@ -39,6 +39,7 @@
 .combobox .options {
   position: absolute;
   top: 100%;
+  z-index: 9999;
   min-width: 100%;
   padding: 0;
   margin: -1px 0 0;
